🚧 working in progress

--- a/public/books.html
+++ b/public/books.html
@@ -11,7 +11,7 @@
 </head>
 <body>
    <h1>SKOOBOOKS</h1>
-   <form action="/records" enctype="multipart/form-data" method="POST">
+   <form action="/books" enctype="multipart/form-data" method="POST">
        <input type="file" name="cover" accept="image/*">
        <input type="submit" value="upload">
    </form>
